Uplift checkstyle to 14.1.0, fix style problems